--- a/src/app/exam-edit/quiz-form/quiz-form.component.css
+++ b/src/app/exam-edit/quiz-form/quiz-form.component.css
@@ -1,3 +1,26 @@
 .mat-form-field {
-    margin-top: 16px;
-  }
+  margin-top: 16px;
+}
+
+pre {
+  color: lightcoral;
+}
+
+.valid {
+  color: #01B468;
+}
+
+#requiredMsg {
+  background-color: lightcoral;
+  color: black;
+}
+
+.submit {
+  margin-top: 4%;
+  margin-bottom: 1%;
+  width: 100%;
+  font-size: 100%;
+  letter-spacing: .1em;
+  color: #32797c;
+  background-color: #9cdfe2;
+}
