--- a/src/app/exam-edit/edit-form/edit-form.component.html
+++ b/src/app/exam-edit/edit-form/edit-form.component.html
@@ -2,11 +2,11 @@
 <div class="container loginForm">
     <div class="row">
         <div class="col">
-            <form [formGroup]="formGroup" (submit)="confirmAddExam(formGroup)">
+            <form [formGroup]="formGroup" (submit)="confirmSaveExam(formGroup)">
 
                 <div class="form-group has-feedback">
                     <input type="text" class="form-control form-input" formControlName="name"
-                        placeholder="please enter the exam-name" required>
+                        placeholder="please enter the exam-name" required readonly>
                     <span class="glyphicon form-control-feedback"
                         *ngIf="formGroup.controls['name'].invalid && (formGroup.controls['name'].dirty || formGroup.controls['name'].touched)">
                         <span *ngIf="formGroup.controls['name'].errors">
@@ -17,12 +17,11 @@
                 </div>
 
                 <div *ngIf="!formGroup.valid || !this.quizzes.length">
-                    <button id="requiredMsg" type="submit" class="btn btn-default submit" [disabled]="true">plz check
-                        the all required fileds</button>
+                    <button id="requiredMsg" type="submit" class="btn btn-default submit" [disabled]="true">the exam needs atleast one quiz</button>
                 </div>
 
                 <div *ngIf="formGroup.valid && this.quizzes.length">
-                    <button id="submit" type="submit" class="btn btn-default submit" [disabled]="!formGroup.valid">add
+                    <button id="submit" type="submit" class="btn btn-default submit" [disabled]="!formGroup.valid">save
                         exam</button>
                 </div>
 
