--- a/src/app/exam-edit/add/add.component.css
+++ b/src/app/exam-edit/add/add.component.css
@@ -67,7 +67,6 @@ a:focus, a:hover {
 
 .loginForm .form-control {
   	background-color: transparent;
-  	border-bottom: 2px solid #32797c;
   	border-radius: 0;
   	padding-left: 0;
 }
@@ -114,6 +113,9 @@ pre {
 .valid {
   color: 	#01B468;
 }
+.unvalid{
+	color:black
+}
 
 .correctAns{
 	border-color: #4cbd38;
@@ -122,9 +124,10 @@ pre {
 	border-radius: 5px;
 }
 .quizContent{
-	border-color: skyblue !important;
-	border-width: 2px !important;
 	border-style: solid!important;
+	height: auto;
+	display: inline-block !important;
+	display: inline;
 }
 .material-icons{
 	cursor: pointer;
