--- a/src/app/exam-edit/edit-form/edit-form.component.html
+++ b/src/app/exam-edit/edit-form/edit-form.component.html
@@ -45,20 +45,21 @@
             <div class="row">
                 <div class="col-0.5">
                     <br>
-
+    
                     <i class="material-icons" (click)="editThisQuiz(idx)">file_open</i>
                     <i class="material-icons" (click)="removeThisQuiz(idx)">close</i>
                 </div>
                 <div class="col">
                     <mat-card class="quiz-card">
                         <mat-card-subtitle>
-                            <textarea class="form-control quizContent" disabled
-                                contenteditable>{{quiz.quizContent}}</textarea>
+                            <div>
+                                <pre class="form-control quizContent">{{quiz.quizContent}}</pre>
+                            </div>
                         </mat-card-subtitle>
                         <mat-card-content>
                             <div *ngFor="let choose of quiz.chooses">
-                                <div [ngClass]="{'correctAns': this.isCorrectAns(choose, quiz.correctContents)}">
-                                    {{choose}}</div>
+                                <pre
+                                    [ngClass]="{'valid': this.isCorrectAns(choose, quiz.correctContents), 'unvalid': !this.isCorrectAns(choose, quiz.correctContents)}">{{choose}}</pre>
                             </div>
                         </mat-card-content>
                     </mat-card>
