--- a/src/app/share/choose-wrapper/choose-wrapper.component.html
+++ b/src/app/share/choose-wrapper/choose-wrapper.component.html
@@ -1,2 +1,2 @@
 <pre *ngIf="this.isCorrect" class="valid">{{this.choose}}</pre>
-<pre *ngIf="!this.isCorrect" class="unvalid">{{this.choose}}</pre>
+<pre *ngIf="!this.isCorrect" class="{{this.getChooseClass()}}">{{this.choose}}</pre>
