--- a/src/app/exam-edit/add/add.component.html
+++ b/src/app/exam-edit/add/add.component.html
@@ -5,7 +5,7 @@
             <form [formGroup]="formGroup" (submit)="confirmAddExam(formGroup)">
 
                 <div class="form-group has-feedback">
-                    <input type="text" class="form-control form-input" formControlName="name"
+                    <input type="text" class="form-control form-input examName" formControlName="name"
                         placeholder="please enter the exam-name" required>
                     <span class="glyphicon form-control-feedback"
                         *ngIf="formGroup.controls['name'].invalid && (formGroup.controls['name'].dirty || formGroup.controls['name'].touched)">
